Fix navbar alignment

--- a/source/style.scss
+++ b/source/style.scss
@@ -221,3 +221,5 @@ footer {
     position: relative;
     top: 2px;
 }
+
+#navbar { padding-left: 16px }
